# binance-ocaml-api

./: .gitignore  README.md  binance_ocaml_api.opam  dune-project  market_data_endpoints.opam  utilities.opam
lib/: binance_ocaml_api.ml  binance_ocaml_api.mli  dune  lib.ml
lib/error_code/: dune  error_code.ml  error_code.mli
lib/klines/: dune  klines.ml  klines.mli
lib/margin_account/: dune  margin_account.ml  margin_account.mli
lib/margin_account/cancel_all/: cancel_all.ml  cancel_all.mli
lib/margin_account/cancel_order/: cancel_order.ml  cancel_order.mli
lib/margin_account/close_order/: close_order.ml  close_order.mli
lib/margin_account/cross_margin_account_transfer/: cross_margin_account_transfer.ml  cross_margin_account_transfer.mli
lib/margin_account/margin_account_borrow/: margin_account_borrow.ml  margin_account_borrow.mli
lib/margin_account/margin_account_repay/: margin_account_repay.ml  margin_account_repay.mli
lib/margin_account/new_order/: new_order.ml  new_order.mli
lib/margin_account/query_open_orders/: query_open_orders.ml  query_open_orders.mli
lib/market_data_endpoints/: dune  market_data_endpoints.ml  market_data_endpoints.mli
lib/market_data_endpoints/current_average_price/: current_average_price.ml  current_average_price.mli
lib/market_data_endpoints/klines/: klines.ml  klines.mli
lib/market_data_endpoints/old_trade_lookup/: old_trade_lookup.ml  old_trade_lookup.mli
lib/market_data_endpoints/order_book/: order_book.ml  order_book.mli
lib/market_data_endpoints/recent_trade_list/: recent_trade_list.ml  recent_trade_list.mli
lib/market_data_endpoints/server_time/: server_time.ml  server_time.mli
lib/market_data_endpoints/symbol_price_ticker/: symbol_price_ticker.ml  symbol_price_ticker.mli
lib/market_data_endpoints/test_connectivity/: test_connectivity.ml  test_connectivity.mli
lib/order/: dune  order.ml  order.mli
lib/price/: dune  old.txt  price.ml  price.mli
lib/records/: dune  records.mli
lib/records/error/: error.ml  error_code.mli
lib/records/error_code/: error_code.ml
lib/records/response/: response.ml  response.mli
lib/response/: dune  response.ml
lib/response/error_code/: error_code.ml  error_code.mli
lib/spot_account/: dune  spot_account.ml  spot_account.mli
lib/spot_account/account/: account.ml  account.mli
lib/spot_account/new_order/: new_order.ml  new_order.mli
lib/spot_trading/: dune  spot_trading.mli
lib/spot_trading/cancel_order/: cancel_order.ml  cancel_order.mli
lib/spot_trading/new_order/: new_order.ml  new_order.mli
lib/utilities/: dune  utilities.ml  utilities.mli
lib/utilities/base_urls/: base_urls.ml  base_urls.mli
lib/utilities/constants/: constants.ml  constants.mli
lib/utilities/crypto/: crypto.ml  crypto.mli
lib/utilities/data/: data.ml  data.mli
lib/utilities/endpoints/: endpoints.ml  endpoints.mli
lib/utilities/requests/: requests.ml  requests.mli
lib/utilities/url/: url.ml  url.mli
lib/variants/: dune  variants.ml  variants.mli
lib/variants/account_symbol_permissions/: account_symbol_permissions.ml  account_symbol_permissions.mli
lib/variants/allocation_type/: allocation_type.ml  allocation_type.mli
lib/variants/binance_bool/: binance_bool.ml  binance_bool.mli
lib/variants/cancel_restrictions/: cancel_restrictions.ml  cancel_restrictions.mli
lib/variants/chart_interval/: chart_interval.ml  chart_interval.mli
lib/variants/contingency_type/: contingency_type.ml  contingency_type.mli
lib/variants/oco_order_status/: oco_order_status.ml  oco_order_status.mli
lib/variants/oco_status/: oco_status.ml  oco_status.mli
lib/variants/order_response/: order_response.ml  order_response.mli
lib/variants/order_side/: order_side.ml  order_side.mli
lib/variants/order_status/: order_status.ml  order_status.mli
lib/variants/order_types/: order_types.ml  order_types.mli
lib/variants/rate_limit_interval/: rate_limit_interval.ml  rate_limit_interval.mli
lib/variants/rate_limiters_type/: rate_limiters_type.ml  rate_limiters_type.mli
lib/variants/side_effect_type/: side_effect_type.ml  side_effect_type.mli
lib/variants/symbol/: symbol.ml  symbol.mli
lib/variants/symbol_status/: symbol_status.ml  symbol_status.mli
lib/variants/time_in_force/: time_in_force.ml  time_in_force.mli
lib/variants/wallet_transfer_direction/: wallet_transfer_direction.ml  wallet_transfer_direction.mli
lib/variants/working_floor/: working_floor.ml  working_floor.mli
test/: binance_ocaml_api.ml  binance_ocaml_api_test.ml  dune
test/klines/: dune  klines_test.ml
test/margin_account_test/: dune  margin_account_test.ml  margin_account_test.mli
test/margin_account_test/cancel_all_test/: cancel_all_test.ml  dune
test/margin_account_test/cancel_order_test/: cancel_order_test.ml  dune
test/margin_account_test/close_order_test/: close_order_test.ml  close_order_test.mli  dune
test/margin_account_test/cross_margin_account_transfer_test/: cross_margin_account_transfer_test.ml  dune
test/market_data_endpoints/: dune  market_data_endpoints_test.ml
test/market_data_endpoints/current_average_price_test/: dune
test/market_data_endpoints/klines_test/: klines_test.ml  klines_test.mli
test/market_data_endpoints/older_trade_lookup_test/: older_trade_lookup_test.ml
test/market_data_endpoints/order_book_test/: order_book_test.ml
test/market_data_endpoints/recent_trade_list_test/: dune  recent_trade_list_test.ml  recent_trade_list_test.mli
test/market_data_endpoints/server_time_test/: dune  server_time_test.ml
test/market_data_endpoints/symbol_price_ticker_test/: dune  symbol_price_ticker_test.ml
test/market_data_endpoints_test/: dune  market_data_endpoints_test.mli
test/order/: dune  new_order_test.ml  new_order_test.mli  order_test.ml
test/price/: dune  price_test.ml
test/spot_account/: dune  spot_account_test.mli
test/spot_account/new_order_test/: dune  (+1 more)
test/spot_account_test/: dune  spot_account_test.ml  spot_account_test.mli
test/spot_trading_test/: dune  spot_trading_test.ml
test/utilities/: dune  utilities_test.ml  utilities_test.mli
(+21 files in other folders)
