(include_subdirs unqualified)

(library
 (name market_data_endpoints)
 (public_name market_data_endpoints)
 (modules
  market_data_endpoints
  klines
  order_book
  server_time
  symbol_price_ticker
  test_connectivity)
 (libraries
  lwt
  lwt.unix
  conduit-lwt-unix
  ezjsonm
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  tls
  ssl
  utilities)
 (flags
  (:standard -w -67-69-32)))
