(include_subdirs unqualified)

(library
 (name market_data_endpoints)
 (public_name market_data_endpoints)
 (modules
  market_data_endpoints
  current_average_price
  klines
  old_trade_lookup
  order_book
  recent_trade_list
  server_time
  symbol_price_ticker
  test_connectivity)
 (libraries
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  conduit-lwt-unix
  decimal
  error_code
  ezjsonm
  lwt
  lwt.unix
  ssl
  tls
  utilities
  variants)
 (flags
  (:standard -w -67-69-32)))
