(include_subdirs unqualified)

(library
 (name spot_account)
 (public_name spot_account)
 (modules spot_account account)
 (libraries
  cstruct
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  conduit-lwt-unix
  decimal
  error_code
  ezjsonm
  lwt
  lwt.unix
  nocrypto
  ssl
  tls
  utilities
  variants)
 (flags
  (:standard -w -32-67-69)))
